contact us link

--- a/about.html
+++ b/about.html
@@ -2,20 +2,20 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-	<link href="output.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
 
-	<title>Sachcha Prayas</title>
-	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
+    <title>Sachcha Prayas</title>
+    <link rel="icon" type="image/x-icon" href="public/image/logo.png" />
 </head>
 
 <body class="bg-gray-5100 font-sans leading-normal tracking-normal">
 
-	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-	<div class="w-full text-gray-300  font-family-class fixed top-0 left-0  bg-white text-white md:right-0">
+    <div class="w-full text-gray-300  font-family-class fixed top-0 left-0  bg-white text-white md:right-0">
         <div x-data="{ open: false }"
             class="p-2 flex flex-col  md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 ">
             <div class="flex flex-row items-center justify-between">
@@ -54,7 +54,10 @@
                     href="team.html">Team</a>
 
                 <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Gallery</a>
+                    href="new-gallery.html">Gallery</a>
+
+                <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                    href="contact.html">Contact Us</a>
 
                 <a class=" px-4 py-2 mt-2  text-lg  bg-transparent rounded-lg text-red-600 bg-gray-100    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900  focus:bg-gray-200 focus:outline-none focus:shadow-outline "
                     href="donate.html">Donate</a>
@@ -65,105 +68,105 @@
         <div class="border-4 border-orange-400 border-back-color"></div>
 
     </div>
-	<!-- *** header end **** -->
+    <!-- *** header end **** -->
 
 
-	<!-- body -->
-	<section>
-		<div class="container mx-auto flex flex-col lg:flex-row justify-center items-center my-20">
-			<div class="lg:w-6/12 w-full">
-				<img class=" px-8" src="public/image/team/image 109.png" alt="">
-			</div>
+    <!-- body -->
+    <section>
+        <div class="container mx-auto flex flex-col lg:flex-row justify-center items-center my-20">
+            <div class="lg:w-6/12 w-full">
+                <img class=" px-8" src="public/image/team/image 109.png" alt="">
+            </div>
 
-			<div class="w-10/12 lg:px-8 text-justify py-4 lg:py-0  pt-8">
-				<p>
-					Mr. Parvez Khan was born into a traditional landlord family in the village of Mankedi in Jabalpur,
-					Madhya Pradesh. However, his family faced displacement due to the construction of the Bargi Dam when
-					he was born in 1981. This shifted them from landlords to displaced individuals. Parvez grew up
-					witnessing the struggles of his own family and the surrounding displaced community, which fueled his
-					determination to make a difference.
+            <div class="w-10/12 lg:px-8 text-justify py-4 lg:py-0  pt-8">
+                <p>
+                    Mr. Parvez Khan was born into a traditional landlord family in the village of Mankedi in Jabalpur,
+                    Madhya Pradesh. However, his family faced displacement due to the construction of the Bargi Dam when
+                    he was born in 1981. This shifted them from landlords to displaced individuals. Parvez grew up
+                    witnessing the struggles of his own family and the surrounding displaced community, which fueled his
+                    determination to make a difference.
 
-				</p>
+                </p>
 
-				<p>
-					After completing his education, including a degree in journalism and mass communication, Parvez
-					chose rural journalism as his path. He used media as a platform to shed light on issues related to
-					water, forests, land, and displacement in rural areas. He also pursued a master's degree in rural
-					development and decided to forgo traditional employment opportunities.
-				</p>
+                <p>
+                    After completing his education, including a degree in journalism and mass communication, Parvez
+                    chose rural journalism as his path. He used media as a platform to shed light on issues related to
+                    water, forests, land, and displacement in rural areas. He also pursued a master's degree in rural
+                    development and decided to forgo traditional employment opportunities.
+                </p>
 
-				<p>
-					Driven by a desire to empower women in his community, Parvez noticed that local women were engaged
-					in labor-intensive tasks like collecting wood, tending to cattle, and agricultural work. He
-					envisioned a way to help them gain skills that would enable them to lead financially independent
-					lives with dignity. Collaborating with Neha Sharma, a friend working on dress designing and women's
-					issues, Parvez initiated a training center for women, offering courses in sewing, embroidery, and
-					beauty skills. Despite resource constraints, he started the first training center in an Anganwadi
-					(childcare center), providing free training to 15 women.
-				</p>
+                <p>
+                    Driven by a desire to empower women in his community, Parvez noticed that local women were engaged
+                    in labor-intensive tasks like collecting wood, tending to cattle, and agricultural work. He
+                    envisioned a way to help them gain skills that would enable them to lead financially independent
+                    lives with dignity. Collaborating with Neha Sharma, a friend working on dress designing and women's
+                    issues, Parvez initiated a training center for women, offering courses in sewing, embroidery, and
+                    beauty skills. Despite resource constraints, he started the first training center in an Anganwadi
+                    (childcare center), providing free training to 15 women.
+                </p>
 
-				<p>
-					This initiative gained recognition from the Women and Child Development Department and marked the
-					successful launch of Sacha Prayas, an organization aimed at uplifting rural women through skill
-					development and empowerment. Despite limited resources, Parvez's determination and vision led to the
-					creation of a meaningful organization that aimed to transform the lives of women in his community.
-				</p>
+                <p>
+                    This initiative gained recognition from the Women and Child Development Department and marked the
+                    successful launch of Sacha Prayas, an organization aimed at uplifting rural women through skill
+                    development and empowerment. Despite limited resources, Parvez's determination and vision led to the
+                    creation of a meaningful organization that aimed to transform the lives of women in his community.
+                </p>
 
-			</div>
-		</div>
-	</section>
-
-
-	<!-- mission vision section   -->
-	<section>
-		<div class="mx-auto max-w-8xl  lg:px-6 px-4 py-12">
-
-			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
-				<!-- Mission -->
-				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
-					<dt class="font-semibold leading-7">
-						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
-						</p>
-					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">To empower the marginalised section of
-						society especially women and children and ensure their reach to access knowledge and information
-						which helps to lead a dignified life.</dd>
-				</div>
-
-				<!-- vision -->
-				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
-					<dt class=" font-semibold leading-7 ">
-						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
-						</p>
-					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">To create a society where every citizen,
-						especially women and children, lives with dignity and has equal access to services related to
-						health, education, and other basic needs services.
-					</dd>
-				</div>
-
-				<!-- Objective -->
-				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
-					<dt class=" font-semibold leading-7 ">
-						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
-							Objective
-						</p>
-					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">
-						This project aims to empower women and girls by promoting income generation skills, raising
-						awareness, and improving access to rights. It also focuses on environmental security, health,
-						and legal awareness to build a sustainable and empowered community.</dd>
-				</div>
-
-			</dl>
-		</div>
-	</section>
-	<!--mission end  -->
+            </div>
+        </div>
+    </section>
 
 
+    <!-- mission vision section   -->
+    <section>
+        <div class="mx-auto max-w-8xl  lg:px-6 px-4 py-12">
 
-	<!-- footer  -->
-    
+            <dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
+                <!-- Mission -->
+                <div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+                    <dt class="font-semibold leading-7">
+                        <p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
+                        </p>
+                    </dt>
+                    <dd class="mt-2 text-justify leading-7 text-gray-700 ">To empower the marginalised section of
+                        society especially women and children and ensure their reach to access knowledge and information
+                        which helps to lead a dignified life.</dd>
+                </div>
+
+                <!-- vision -->
+                <div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+                    <dt class=" font-semibold leading-7 ">
+                        <p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
+                        </p>
+                    </dt>
+                    <dd class="mt-2 text-justify leading-7 text-gray-700 ">To create a society where every citizen,
+                        especially women and children, lives with dignity and has equal access to services related to
+                        health, education, and other basic needs services.
+                    </dd>
+                </div>
+
+                <!-- Objective -->
+                <div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
+                    <dt class=" font-semibold leading-7 ">
+                        <p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
+                            Objective
+                        </p>
+                    </dt>
+                    <dd class="mt-2 text-justify leading-7 text-gray-700 ">
+                        This project aims to empower women and girls by promoting income generation skills, raising
+                        awareness, and improving access to rights. It also focuses on environmental security, health,
+                        and legal awareness to build a sustainable and empowered community.</dd>
+                </div>
+
+            </dl>
+        </div>
+    </section>
+    <!--mission end  -->
+
+
+
+    <!-- footer  -->
+
     <div class="border-4 border-orange-400 border-back-color"></div>
 
     <footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
@@ -246,7 +249,7 @@
 
 
 
-	<script src="index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
