--- a/donate.html
+++ b/donate.html
@@ -2,20 +2,20 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-	<link href="output.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
 
-	<title>Sachcha Prayas</title>
-	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
+    <title>Sachcha Prayas</title>
+    <link rel="icon" type="image/x-icon" href="public/image/logo.png" />
 </head>
 
 <body class="bg-white font-sans leading-normal tracking-normal ">
 
-	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-	<div class="w-full text-gray-300  font-family-class fixed top-0 left-0  bg-white text-white md:right-0">
+    <div class="w-full text-gray-300  font-family-class fixed top-0 left-0  bg-white text-white md:right-0">
         <div x-data="{ open: false }"
             class="p-2 flex flex-col  md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 ">
             <div class="flex flex-row items-center justify-between">
@@ -54,7 +54,10 @@
                     href="team.html">Team</a>
 
                 <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Gallery</a>
+                    href="new-gallery.html">Gallery</a>
+
+                <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                    href="contact.html">Contact Us</a>
 
                 <a class=" px-4 py-2 mt-2  text-lg  bg-transparent rounded-lg text-red-600 bg-gray-100    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900  focus:bg-gray-200 focus:outline-none focus:shadow-outline "
                     href="donate.html">Donate</a>
@@ -65,18 +68,18 @@
         <div class="border-4 border-orange-400 border-back-color"></div>
 
     </div>
-	<!-- **** Header section end *** -->
- 	<!-- hero  start-->
-	<section class="flex justify-center lg:my-8 my-4 mx-4">
-		<img class="shadow-2xl rounded-md h-3/4 w-3/4 max-w-4xl" src="./public/image/donate-hero.jpg" alt="donate-hero">
+    <!-- **** Header section end *** -->
+    <!-- hero  start-->
+    <section class="flex justify-center lg:my-8 my-4 mx-4">
+        <img class="shadow-2xl rounded-md h-3/4 w-3/4 max-w-4xl" src="./public/image/donate-hero.jpg" alt="donate-hero">
 
-	</section>
-	<!-- hero end-->
+    </section>
+    <!-- hero end-->
 
 
-	
-	<!-- Account Details -->
-	<!-- <div class="flex justify-center py-12  ">
+
+    <!-- Account Details -->
+    <!-- <div class="flex justify-center py-12  ">
 		<div class=" p-6">
 			<div>
 				<h1 class="font-bold pb-4 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Donation Account
@@ -95,8 +98,8 @@
 
 
 
-	<!-- footer  -->
-    
+    <!-- footer  -->
+
     <div class="border-4 border-orange-400 border-back-color"></div>
 
     <footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
@@ -179,7 +182,7 @@
 
 
 
-	<script src="index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
