--- a/our-work.html
+++ b/our-work.html
@@ -15,7 +15,7 @@
 
 	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-	<div class="w-full text-gray-300  font-family-class fixed top-0 left-0  bg-white text-white md:right-0">
+	<div class="w-full text-gray-300  font-family-class  top-0 left-0  bg-white text-white md:right-0">
 		<div x-data="{ open: false }"
 			class="p-2 flex flex-col  md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 ">
 			<div class="flex flex-row items-center justify-between">
