updated and fixed home page bugs

--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
 			</p>
 		</div>
 	</section>
+	<!-- donate button -->
+	<section>
+		<div class="mx-auto flex px-4 py-2 donate w-56 my-5 shadow-xl rounded-lg">
+			<a href="donate.html" class="flex">
+				<h1 class="text-3xl text-white font-bold flex items-center px-2">Donate</h1>
+				<img class="w-20 h-16 px-2" src="public/image/donate-logo.png" alt="">
+			</a>
+		</div>
+	</section>
 
 	<div class="container mx-auto">
 		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
@@ -203,7 +212,7 @@
 	<!-- Main body end  -->
 
 	<!-- mission vision section   -->
-	<section>
+	<section class="flex justify-center">
 		<div class=" container max-w-8xl  lg:px-6 px-4 py-12">
 
 			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
@@ -256,15 +265,7 @@
 	</section>
 	<!--mission end  -->
 
-	<!-- donate button -->
-	<section>
-		<div class="mx-auto flex px-4 py-2 donate w-56 my-5 shadow-xl rounded-lg">
-			<a href="donate.html" class="flex">
-				<h1 class="text-3xl text-white font-bold flex items-center px-2">Donate</h1>
-				<img class="w-20 h-16 px-2" src="public/image/donate-logo.png" alt="">
-			</a>
-		</div>
-	</section>
+	
 
 
 	<!-- footer  -->
