footer-github link

--- a/new-gallery.html
+++ b/new-gallery.html
@@ -228,23 +228,25 @@
                     </a>
                 </div>
 
-                <div>
-                    <p class="mt-8 mb-2 text-base leading-5 text-black md:order-1 md:mt-0 font-family-class">&copy;
-                        Copyright
-                        Sachcha Prayas
-                        - All rights reserved.</p>
+               <!-- copyright -->
+				<div>
+					<p class="mt-8 mb-2 text-base leading-5 text-black md:order-1 md:mt-0 font-family-class">&copy;
+						Copyright
+						Sachcha Prayas
+						- All rights reserved.</p>
 
-                    <p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-black font-family-class">
-                        built with 💙 by <a
-                            href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
-                            target="_blank" class="li-text-color  hover: hover:donate-color hover:underline">Tech4Good
-                            Fellows</a> &
-                        Hosted Freely on <a href="" class="li-text-color hover:donate-color hover:underline">Github
-                            Pages</a>
-                        </a>
-                    </p>
+					<p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-black font-family-class">
+						built with 💙 by <a
+							href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
+							target="_blank" class="li-text-color  hover:text-green-600 hover:underline">Tech4Good
+							Fellows</a> &
+						Hosted Freely on <a href="https://github.com/t4glabs/sachcha-prayas-website"
+							class="li-text-color hover:text-green-600 hover:underline">Github
+							Pages</a>
+						</a>
+					</p>
+				</div>
 
-                </div>
             </div>
         </div>
     </footer>
