--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     href="index.html">Home</a>
 
                 <a class="px-4 py-2 mt-2 nav-link-color text-lg  rounded-lg  md:mt-0 hover:text-red-600 hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="about.html">About Us</a>
+                    href="#">About Us</a>
 
                 <!-- **** -->
 
@@ -117,7 +117,7 @@
     </section>
 
 
-  
+
 
 
 
@@ -170,8 +170,10 @@
                                 d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
                         </svg>
                     </a>
-
                 </div>
+
+
+                <!-- copyright -->
                 <div>
                     <p class="mt-8 mb-2 text-base leading-5 text-black md:order-1 md:mt-0 font-family-class">&copy;
                         Copyright
@@ -181,14 +183,15 @@
                     <p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-black font-family-class">
                         built with 💙 by <a
                             href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
-                            target="_blank" class="li-text-color  hover: hover:donate-color hover:underline">Tech4Good
+                            target="_blank" class="li-text-color  hover:text-green-600 hover:underline">Tech4Good
                             Fellows</a> &
-                        Hosted Freely on <a href="" class="li-text-color hover:donate-color hover:underline">Github
+                        Hosted Freely on <a href="https://github.com/t4glabs/sachcha-prayas-website"
+                            class="li-text-color hover:text-green-600 hover:underline">Github
                             Pages</a>
                         </a>
                     </p>
-
                 </div>
+
             </div>
         </div>
     </footer>
