--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<nav :class="{'flex': open, 'hidden': !open}"
 				class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
 				<a class="px-4 py-2 mt-2 nav-link-color text-lg  rounded-lg  md:mt-0 hover:text-red-600 hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-					href="index.html">Home</a>
+					href="#">Home</a>
 
 				<a class="px-4 py-2 mt-2 nav-link-color text-lg  rounded-lg  md:mt-0 hover:text-red-600 hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="about.html">About Us</a>
@@ -246,8 +246,7 @@
 
 				<!-- Objective -->
 				<div class=" p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
-					<img class="mx-auto w-20 flex items-center justify-center " src="public/image/icon/goal.png"
-						alt="">
+					<img class="mx-auto w-20 flex items-center justify-center " src="public/image/icon/goal.png" alt="">
 
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
@@ -265,7 +264,7 @@
 	</section>
 	<!--mission end  -->
 
-	
+
 
 
 	<!-- footer  -->
@@ -316,8 +315,9 @@
 								d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
 						</svg>
 					</a>
-
 				</div>
+
+				<!-- copyright -->
 				<div>
 					<p class="mt-8 mb-2 text-base leading-5 text-black md:order-1 md:mt-0 font-family-class">&copy;
 						Copyright
@@ -329,12 +329,13 @@
 							href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
 							target="_blank" class="li-text-color  hover:text-green-600 hover:underline">Tech4Good
 							Fellows</a> &
-						Hosted Freely on <a href="" class="li-text-color hover:text-green-600 hover:underline">Github
+						Hosted Freely on <a href="https://github.com/t4glabs/sachcha-prayas-website"
+							class="li-text-color hover:text-green-600 hover:underline">Github
 							Pages</a>
 						</a>
 					</p>
-
 				</div>
+
 			</div>
 		</div>
 	</footer>
