--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
 
 	<title>Sachcha Prayas</title>
 	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
-	<style>
+	<!-- <style>
 		.goog-te-banner-frame{
 			display:none !important;
 		}
@@ -44,7 +44,7 @@
 			cursor: pointer;
 			appearance: none;
 		}
-		</style>
+		</style> -->
 </head>
 
 <body class="bg-stone-50 font-sans leading-normal tracking-normal ">
@@ -455,12 +455,13 @@
 
 
 	<script type="text/javascript">
-        function googleTranslateElementInit() {
-          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-        }
-        </script>
-        
-        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+		}
+	</script>
+
+	<script type="text/javascript"
+		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 
