--- a/index.html
+++ b/index.html
@@ -13,42 +13,7 @@
 	<title>Sachcha Prayas</title>
 	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
 
-	<style>
-		.goog-te-banner-frame{
-			display:none !important;
-		}
-		
-		#google_translate_element select{
-			background-color:#ffffff;
-			color:  rgb(220 38 38);
-			border: none;
-			width: 115px;
-			overflow: hidden;
-			border: 1px solid #ccc;
-			border-radius: 5px;
-			padding:6px 8px
-		}
-		.goog-logo-link{
-			display:none !important;
-		}
-		.goog-te-gadget{
-			color:transparent!important;
-		}
-		.VIpgJd-ZVi9od-l4eHX-hSRGPd{
-			display:none !important;
-		}
-		.goog-te-combo{
-			width: 202px;
-			overflow: hidden;
-			border: 1px solid #009e4d;
-			border-radius: 5px;
-			padding: 10px;
-			background-color: #f7f7f7;
-			color: #13b95a;
-			cursor: pointer;
-			appearance: none;
-		}
-		</style>
+
 </head>
 
 <body class="bg-stone-50 font-sans leading-normal tracking-normal ">
@@ -99,8 +64,10 @@
 					href="contact.html">Contact Us</a>
 
 				<a class=" px-4 py-2 mt-2  text-lg  bg-transparent rounded-lg text-red-600 bg-gray-100    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900  focus:bg-gray-200 focus:outline-none focus:shadow-outline "
-					href="donate.html">Donate</a>
-					<div id="google_translate_element"></div>	
+					href="donate.html">Donate
+				</a>
+
+				<div id="google_translate_element"></div>
 			</nav>
 		</div>
 
@@ -171,6 +138,8 @@
 			</p>
 		</div>
 	</section>
+
+
 	<!-- donate button -->
 	<section>
 		<div class="mx-auto flex px-4 py-2 donate w-56 my-5 shadow-xl rounded-lg">
@@ -246,6 +215,7 @@
 		</div>
 	</div>
 	<!-- Main body end  -->
+
 
 	<!-- mission vision section   -->
 	<section class="flex justify-center">
@@ -379,12 +349,13 @@
 
 
 	<script type="text/javascript">
-        function googleTranslateElementInit() {
-          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-        }
-        </script>
-        
-        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+		}
+	</script>
+
+	<script type="text/javascript"
+		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 
