--- a/our-work.html
+++ b/our-work.html
@@ -9,7 +9,7 @@
 
 	<title>Sachcha Prayas</title>
 	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
-	<style>
+	<!-- <style>
 		.goog-te-banner-frame{
 			display:none !important;
 		}
@@ -44,7 +44,7 @@
 			cursor: pointer;
 			appearance: none;
 		}
-		</style>
+		</style> -->
 </head>
 
 <body class="bg-stone-50 font-sans leading-normal tracking-normal ">
