updated hero text

--- a/index.html
+++ b/index.html
@@ -77,64 +77,28 @@
 	</div>
 	<!-- header end -->
 
-
-	<!-- carousel -->
-	<!-- <section class="lg:px-24 lg:py-8 py-4 flex flex-col justify-center  ">
-		<div class="flex items-center justify-center  container mx-auto lg:my-12 p-2 mt-12 ">
-			<div x-data="{ activeSlide: 0 }" class=" overflow-hidden w-full  lg:mx-14 mx-6">
-				<div class="carousel mt-12 ">
-
-
-					<div x-show="activeSlide === 0" class="carousel-item border border-gray-800 rounded-md ">
-						<img class="w-full rounded-md" src="public/image/gallery/carousel1.png" alt="Image 1">
-					</div>
-
-
-					<div x-show="activeSlide === 1" class="carousel-item border border-gray-800  rounded-md">
-						<img class="w-full rounded-md" src="public/image/gallery/carousel2.png" alt="Image 2">
-					</div>
-
-
-					<div x-show="activeSlide === 2" class="carousel-item border border-gray-800  rounded-md">
-						<img class="w-full rounded-md" src="public/image/gallery/carousel3.png" alt="Image 3">
-					</div>
-
-
-					<div x-show="activeSlide === 3" class="carousel-item border border-gray-800 rounded-md ">
-						<img class="w-full rounded-md" src="public/image/gallery/carousel4.png" alt="Image 4">
-					</div>
-
-				</div>
-
-
-				<div class="carousel-controls flex justify-center">
-					<button @click="activeSlide = (activeSlide - 1 + 4) % 4"
-						class="carousel-control-prev w-20 h-10 ml-2 md:ml-10  cursor-pointer text-3xl font-bold text-black hover:text-white hover:text-green-600 rounded-lg  mt-4 bg-green-600  leading-tight text-center inset-y-0 left-0 my-auto controller">
-						‹
-					</button>
-					<button @click="activeSlide = (activeSlide + 1) % 4"
-						class="carousel-control-next w-20 h-10 ml-2 md:ml-10  cursor-pointer text-3xl font-bold text-black hover:text-white hover:text-green-600 rounded-lg  mt-4 bg-green-600   leading-tight text-center inset-y-0 right-0 my-auto controller">
-						›
-					</button>
-				</div>
-			</div>
-		</div>
-	</section> -->
-	<!-- end -->
-
-
+	<!-- give me a html and tailwind css where it will have heading on left and text and below it/ -->
 
 	<!-- Main body  -->
 	<section>
 		<div class="container mx-auto lg:px-6 px-4 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left  mt-4 lg:mt-0">
+			<div class="mt-12 lg:mt-0 ">
+				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-20">
+					Empowering Lives, Transforming Communities!
+				</h1>
+			<p class="mx-auto text-justify text-lg mb-6 p-20">
+				The story of our organisation, Sachcha Prayas Sanstha is one that is rooted in the wide-spread displacement caused by the construction of the Bargi dam in Jabalpur, Maharashtra. People from over 184 villages were uprooted and displaced, causing a loss of homes and livelihood. 
 
-			<p class="mx-auto text-justify text-lg mb-6 ">
-				Sachcha Prayas is committed to creating a society where every citizen, especially women and children,
-				can lead a life of dignity and equality. Their mission encompasses various initiatives to promote income
-				generation activities, environmental security, health and hygiene practices, legal awareness, and child
-				rights. They aim to promote environmental sustainability, social justice, and support those in need.
-				Through their various awareness campaigns, they hope to create mass awareness among community members
-				and foster a people-centered approach to advocacy on common issues.
+				Our founder, Parvez Khan’s family is one such family that were displaced and put through the turmoil of rebuilding their lives in the name of development. Drawing inspiration from the thousands of affected families, including his own, Parvez committed his life to empower marginalised communities. This paired with his years of journalistic pursuits in the area, highlighting the struggles of the rural people, paved the foundation for the organisation. 
+
+				This collective experience ultimately led to the establishment of Sachcha Prayas Sanstha in collaboration with Neha Sharma, a fashion designer. On November 17th, 2009, our NGO was officially established under the Society Act.
+
+				Our journey began in Harduli-Mankhedi (Harduli-Bargi Gram Panchayat), Jabalpur district, Madhya Pradesh. This area witnessed significant displacement  of marginalised communities due to the Bargi Dam construction. In the beginning, our main goal was to empower rural women, especially those in distress, through skill-building, that could help them live dignified and financially independent lives. These women often face challenges and are denied basic rights, even though they shoulder most of the responsibilities of their households and farms. Currently, we have expanded our organisation's capabilities to simultaneously focus on child rights, education, legal aid and health. 
+
+				We understand that empowerment goes beyond words – it's about skills that translate into self-reliance. Our focus has been to empower women with skills such as machine tailoring, hand embroidery, mehndi art, and beauty parlour techniques. By providing these comprehensive skill-set training along with encouraging traditional forms occupations, we enable women to contribute to their households and communities positively.
+
+				Our core purpose is to create a better future for those often left behind, particularly rural women and children. Our biggest aspiration is to empower displaced families, adivasis, SC, ST, and backward-class individuals by providing them with valuable skills sets and opportunities.
+				
 			</p>
 		</div>
 	</section>
